[tool.poetry]
name = "georegister"
version = "0.1.0"
description = "Where are most companies registered?"
authors = ["Magdalena Surówka"]

[tool.poetry.dependencies]
python = "^3.9"
mapclassify = "^2.4.2"
graphly = {git = "https://github.com/zazuko/graphly.git", rev = "main"}
folium = "^0.12.1"
dash = "^2.5.1"
dash-bootstrap-components = "^1.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
